# BennuGD2

./: EMSCRIPTEN_QUICKSTART.txt  EMSCRIPTEN_README.md  README.md  build.sh  fpg.prg  massif.out.38300  package-web-game.sh  patch-modules-emscripten.sh  raycast.html  sector.prg  test-emscripten-build.sh  test.prg
.github/: build.yml
.github/workflows/: BuildWindows.yml  Build_Windows64.yml  Packages.yml  Switch.yml  build-and-release.yml  build-linux64.yml  build-macosx.yml  build-switch.yml  build-windows-macosx.yml  build-windows.yml  build.yml  buildSwitch.yml  build_release.yml  builldwin.yml  main.yml  master.yml
Maps/: M1N1.raymap
assets/: textures.fpg
core/: make-fakedl.sh
core/bgdi/: CMakeLists.txt  main.c  shell.html
core/bgdrtm/: dcbr.c  misc.c
core/include/: commons_defs.h  dcb.h  dlvaracc.h  fake_dl.h  instance_st.h
games/Goody/: Goody.prg
games/Joselkiller/: Joselkiller.prg
games/Joselkiller/fpg/: juego.fpg  scroll2.fpg  scroll23.fpg  scroll24.fpg  scroll4.fpg  scroll5.fpg  scroll7.fpg  scroll8.fpg  scroll9.fpg
games/MrBike/fpg/: graphic.fpg
games/puzsion/: puzsion.prg
games/src/: main.prg
games/src/includes/: scene_commons.prg  scenes_list.prg
games/src/scenes/: menu.prg  menu_2.prg
libmod_build/: future_roadmap.md  grouscan_complete.c  grouscan_final.c  libmod_build.h  libmod_build_exports.h  libmod_build_map.c  libmod_build_physics.c  libmod_build_render.c
libmod_build/EDUKE32/: E1L1.MAP  TILES000.ART
libmod_build/MAPS/: TILES005.ART  TILES009.ART  area27.txt
libmod_build/OLD/: libmod_wld.c
libmod_dengine/: CMakeLists.txt  doom_argv.c  doom_argv.h  doom_config.h  doom_file.c  doom_file.h  doom_file_stdc.c  doom_fixed.c  doom_misc.c  doom_misc.h  doom_mode.c  doom_mode.h  doom_render.c  doom_render.h  doom_render_draw.c  doom_system.c  doom_system.h  doom_tables.c  doom_wad.c  doom_zone.c  libmod_doom.c  libmod_doom.h  libmod_doom_exports.h  test_doom.prg
libmod_dengine/OLD/: vpe_adapter.h
modules/libbggfx/: CMakeLists.txt  CMakeLists.txt.android-backup  CMakeLists.txt.bak3  g_bitmap.c  g_blit.c  g_frame.c  g_media_theora.h  g_pixel.c  g_shaders.h  g_video.c  g_video.h  libbggfx.h  vita_gl_stubs.c
modules/libbginput/: CMakeLists.txt  i_sensors.c
modules/libbgload/: CMakeLists.txt
modules/libbgsound/: CMakeLists.txt
modules/libmod_ads/: CMakeLists.txt
modules/libmod_basic/: CMakeLists.txt  libmod_basic.c  libmod_basic.h
modules/libmod_build/: CMakeLists.txt  analyze_wld  grouscan_reference.txt  libmod_build.c  libmod_build_art.c  test_build.prg
modules/libmod_build/EDUKE32/: E1L2.MAP  TILES007.ART  TILES010.ART
modules/libmod_build/MAPS/: LUGO.MAP  TILES004.ART  TILES008.ART  TILES012.ART
modules/libmod_curl/: CMakeLists.txt  mod_curl.c  mod_curl_exports.h
modules/libmod_debug/: CMakeLists.txt
modules/libmod_doom3d/: CMakeLists.txt  README.txt  doom3d_example.prg  libmod.h  libmod_doom3d.c  map.txt
modules/libmod_gfx/: CMakeLists.txt
modules/libmod_heightmap/: CMakeLists.txt  INTEGRATION_INSTRUCTIONS.md  libmod_heightmap.c  libmod_heightmap.h  libmod_heightmap_exports.h
modules/libmod_iap/: CMakeLists.txt
modules/libmod_input/: CMakeLists.txt
modules/libmod_misc/: CMakeLists.txt  m_mem.c
modules/libmod_net/: CMakeLists.txt
modules/libmod_outrun/: CMakeLists.txt  libmod_outrun.c  libmod_outrun.h  libmod_outrun_exports.h
modules/libmod_ray/: CMakeLists.txt  PLAN_MOTOR_NUEVO.md  README_DEMO.md  TEST_GEOMETRIC.md  level1.raymap  libmod_ray.c  libmod_ray.h  libmod_ray_exports.h  libmod_ray_map.c  libmod_ray_render.c  libmod_ray_render_build.c  libmod_ray_render_recursive.c  prueba.fpg  pvs_logic_snippet.c  rock.raymap  template.campath  template.raymap  test.raymap  test1.raymap  test_billboard.dcb  test_billboard.prg  test_camera_load.prg  test_fps_weapon.prg  test_geometric.prg  test_md.prg  test_minimal.prg  test_ray.dcb  test_ray.prg  test_ray_fixed.dcb  test_ray_fixed.prg  test_ray_simple.prg  textures2.fpg  wld.raymap
modules/libmod_ray/EDUKE32/: TILES003.ART  TILES006.ART
modules/libmod_ray/Models/md3/: Lara.md3
modules/libmod_ray/OLD/: libmod_wld_exports.h
modules/libmod_ray/backup/: CMakeLists.txt  libmod_ray.c  libmod_ray.h  libmod_ray_exports.h  libmod_ray_geometry.c  libmod_ray_md2.c  libmod_ray_md2.h  libmod_ray_render_build.c  libmod_ray_render_md2.c  santa.fpg  temp_func.c  test.raymap  test_geometric.prg
modules/libmod_ray/backup/EDUKE32/: EDUKE32_REVISION.mak  TILES001.ART  TILES002.ART  TILES011.ART
modules/libmod_ray/backup/Maps/: M1N1.raymap
modules/libmod_ray/backup/backup_portal_steps/: libmod_ray.c  libmod_ray_render_build.c  visualmodewidget.cpp
modules/libmod_ray/backup/backups_islands_working/: libmod_ray_render_build.c  test_geometric.prg
modules/libmod_ray/backup/md3_implementation_20260101_232613/: CMakeLists.txt  libmod_ray.c  libmod_ray_exports.h  libmod_ray_map.c  libmod_ray_render.c  libmod_ray_render_build.c  test_geometric.prg
modules/libmod_ray/backup/tools/raymap_editor/: grideditor.cpp  grideditor.h  mainwindow.cpp  mainwindow.h  raymapformat.cpp  visualmodewidget.h
modules/libmod_ray/backup/ui_portal_fix/: grideditor.cpp  grideditor.h  libmod_ray_raycasting.c  libmod_ray_render_build.c  mainwindow.cpp  mainwindow.h
modules/libmod_ray/tools/: Car.md3  Car.mtl  GLB_SUPPORT.md  Lara.md3  OBJ_TO_MD3_README.md  boruto.md3  convert_model.sh  model_to_md3.py  obj_to_md3.py  obj_to_md3_atlas_method.txt  sonic.md3
modules/libmod_raycast/: CMakeLists.txt  libmod_raycast.c  libmod_raycast.h  libmod_raycast_exports.h  raycast_engine.h
modules/libmod_sound/: CMakeLists.txt
modules/libmod_texto/: CMakeLists.txt  libmod_texto.c  libmod_texto_exports.h
modules/libsdlhandler/: CMakeLists.txt
tools/dmap/: dmap.c  wld_creator
tools/fpg2tex/: fpg2tex  fpg2tex.c
tools/fpgtex/: fpg2tex.c
tools/tex/: tex.c  tex_creator_fixed
