project(bggfx)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${TARGET}/bin/")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${TARGET}/bin/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${TARGET}/bin/")
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
if(NOT EMSCRIPTEN)
    if(NOT DEFINED SDL2_INCLUDE_DIR)
        find_package(SDL2 REQUIRED)
    endif()
    
    if(USE_SDL2_GPU)
        find_package(SDL_GPU REQUIRED)
    endif()
endif()
add_definitions(-D__LIBBGFGX ${EXTRA_CFLAGS})
include_directories(${SDL2_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/core/include ${CMAKE_SOURCE_DIR}/core/bgdrtm ${CMAKE_SOURCE_DIR}/modules/libsdlhandler ${CMAKE_SOURCE_DIR}/modules/libbggfx ${SDL_GPU_INCLUDE_DIR} ${INCLUDE_DIRECTORIES} ${CMAKE_SOURCE_DIR}/vendor/theoraplay)
if(EMSCRIPTEN)
    file(GLOB SOURCES_LIBBGGFX "${CMAKE_SOURCE_DIR}/modules/libbggfx/*.c")
    list(REMOVE_ITEM SOURCES_LIBBGGFX "${CMAKE_SOURCE_DIR}/modules/libbggfx/g_media_theora.c")
    list(REMOVE_ITEM SOURCES_LIBBGGFX "${CMAKE_SOURCE_DIR}/modules/libbggfx/vita_gl_stubs.c")
    add_definitions(-DNO_THEORA)
else()
    file(GLOB SOURCES_LIBBGGFX
         "${CMAKE_SOURCE_DIR}/modules/libbggfx/*.c"
         "${CMAKE_SOURCE_DIR}/vendor/theoraplay/theoraplay.c"
         )
    list(REMOVE_ITEM SOURCES_LIBBGGFX "${CMAKE_SOURCE_DIR}/modules/libbggfx/vita_gl_stubs.c")
endif()
if(VITA)
    list(APPEND SOURCES_LIBBGGFX "${CMAKE_SOURCE_DIR}/modules/libbggfx/vita_gl_stubs.c")
endif()
if(MINGW)
    set(OGL_LIB -lopengl32)
endif()
if(APPLE)
    set(OGL_LIB -L$ENV{SDKROOT}/System/Library/Frameworks/OpenGL.framework/Libraries/ -lGL)
endif()
if(ANDROID)
    add_definitions(-D__ANDROID__ -DUSE_GLES2)
    include_directories(${PREFIX_JNI}/include)
    set(ANDROID_PATH_LIB -L${PREFIX_JNI}/lib)
    set(OGL_LIB GLESv1_CM GLESv2 OpenSLES log android)
endif()
if(VITA)
    set(OGL_LIB vita2d vitaGL vitashark SceShaccCgExt SceGxm_stub SceDisplay_stub SceCommonDialog_stub SceSysmodule_stub SceAppMgr_stub SceCtrl_stub SceMotion_stub SceTouch_stub SceAudio_stub SceAudioIn_stub SceHid_stub SceIme_stub SceKernelDmacMgr_stub ScePower_stub SceNet_stub SceNetCtl_stub ScePgf_stub SceRazorCapture_stub SceShaccCg_stub m mathneon taihen_stub)
endif()
add_library(bggfx ${LIBRARY_BUILD_TYPE} ${SOURCES_LIBBGGFX})
if(EMSCRIPTEN)
    target_link_libraries(bggfx ${SDL2_LIBRARY} ${SDL2_LIBRARIES} ${SDL_GPU_LIBRARY} -L${CMAKE_SOURCE_DIR}/bin bgdrtm ${OGL_LIB} ${STDLIBSFLAGS} ${ANDROID_PATH_LIB} ogg vorbis sdlhandler)
else()
    target_link_libraries(bggfx ${SDL2_LIBRARY} ${SDL2_LIBRARIES} ${SDL_GPU_LIBRARY} -L${CMAKE_SOURCE_DIR}/bin bgdrtm ${OGL_LIB} ${STDLIBSFLAGS} ${ANDROID_PATH_LIB} ogg vorbis theoradec sdlhandler)
endif()
